--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <div id="demo">
     <h1>github-rpg-contributors</h1>
     <github-rpg-contributors org="haxtheweb" repo="webcomponents" limit="10"></github-rpg-contributors>
+    <github-rpg-contributors org="nflverse-pbp" repo="gh repo clone nflverse/nflverse-pbp" limit="10"></github-rpg-contributors>
   <script type="module" src="./github-rpg-contributors.js"></script>
 
   <!-- Take HAX, the Web and you further down the rabbit hole -->
